--- a/PropertyManageSystem/WebRoot/index.html
+++ b/PropertyManageSystem/WebRoot/index.html
@@ -14,7 +14,7 @@
 <body>
     <!--顶部-->
     <div class="layout_top_header">
-            <div style="float: left"><span style="font-size: 16px;line-height: 45px;padding-left: 20px;color: #8d8d8d">物业管理系统后台</h1></span></div>
+            <div style="float: left"><span style="font-size: 16px;line-height: 45px;padding-left: 20px;color: #8d8d8d">物业管理系统后台</span></div>
             <div id="ad_setting" class="ad_setting">
                 <a class="ad_setting_a" href="javascript:; ">
                     <i class="icon-user glyph-icon" style="font-size: 20px"></i>
